@@ -1,3 +1,0 @@
-MD5 faf912441ebb992c1bcd4959e3bf80e2 REV-plugins-0.2.1.tar.bz2 17377
-RMD160 e40b0b7637fc6977ccd464f18e53ad67047c9f9f REV-plugins-0.2.1.tar.bz2 17377
-SHA256 ac03a6354f784a7a35f85ea6baff4b774c8398ae289329d3c692ea84be9590df REV-plugins-0.2.1.tar.bz2 17377
